ChangeLog for package rkwarddev

changes in version 0.06-4 (2014-09-01)
added:
  - new functions rk.set.language(), rk.get.language() and i18n() to facilitate
    static internationalisation of plugins; makes use of a new internal environment
    .rkdev.env
fixed:
  - abbreviation of labels now limits valid characters to [0-9A-Za-z]
    
changes in version 0.06-3 (2013-12-21)
fixed:
  - fixed outdated example code for rk.plugin.component()
added:
  - new function rk.uniqueIDs() checks for duplicate IDs
  - rk.JS.array() can now be told to quote values
changed:
  - rk.plugin.component() and rk.rkh.doc() do now interpret the "hints" argument to prevent the
    generation of optional XML nodes.
  - rk.plugin.component() now automatically calls rk.uniqueIDs() and stops if IDs are not unique

changes in version 0.06-2 (2013-04-04)
changed:
  - the structure of <about> nodes will change in RKWard 0.6.1,
    <dependencies> will become a direct child of <document> or <component>, which explains
    several changes in this release. this is not really critical, because this
    information wasn't evaluated by RKWard until now anyway
  - for consistency, from now on <component> is never an empty node
  - rk.XML.pluginmap(), rk.XML.plugin() and rk.plugin.skeleton() will now
    move <dependencies> from <about> to a top level child node of plugin maps,
    with a warning
  - from rk.plugin.component() and rk.XML.plugin(), the "pluginmap" argument
    was replaced by the more general "include", which can now also process a
    vector of file names
  - the object class rk.JS.var gained a new slot "getter" to set a default JS
    function to query variable values. it defaults to "getValue" to ensure
    compatibility with earlier releases. consequently, rk.JS.vars() and
    rk.paste.JS() have a new  "getter" argument to set or overwrite this value.
    another new argument, "guess.getter", can be used to turn on automatic guessing