@@ -43,6 +43,7 @@
 #'    See \code{\link[rkwarddev:rk.XML.dependencies]{rk.XML.dependencies}} for details. Skipped if \code{NULL}.
 #' @param gen.info Logical, if \code{TRUE} a comment note will be written into the document,
 #'    that it was generated by \code{rkwarddev} and changes should be done to the script.
+#' @param lang Character string, the language of the plugin. See \code{\link[rkwarddev:i18n]{i18n}} for details.
 #' @return An object of class \code{XiMpLe.doc}.
 #' @export
 #' @seealso \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
@@ -63,7 +64,7 @@
 #' }
 
 rk.XML.plugin <- function(name, dialog=NULL, wizard=NULL, logic=NULL, snippets=NULL, provides=NULL, help=TRUE, include=NULL,
-  label=NULL, clean.name=TRUE, about=NULL, dependencies=NULL, gen.info=TRUE){
+  label=NULL, clean.name=TRUE, about=NULL, dependencies=NULL, gen.info=TRUE, lang=rk.get.language()){
   if(isTRUE(clean.name)){
     name.orig <- name
     name <- clean.name(name)
@@ -75,10 +76,17 @@ rk.XML.plugin <- function(name, dialog=NULL, wizard=NULL, logic=NULL, snippets=N
     all.children[[length(all.children)+1]] <- generator.info
   } else {}
 
-  all.children[[length(all.children)+1]] <- rk.XML.code(file=paste0(name, ".js"))
+  # check for i18n
+  if(is.null(lang)){
+    lang.file <- NULL
+  } else {
+    lang.file <- paste0(".", lang)
+  }
+
+  all.children[[length(all.children)+1]] <- rk.XML.code(file=paste0(name, lang.file, ".js"))
 
   if(isTRUE(help)){
-    all.children[[length(all.children)+1]] <- rk.XML.help(file=paste0(name, ".rkh"))
+    all.children[[length(all.children)+1]] <- rk.XML.help(file=paste0(name, lang.file, ".rkh"))
   } else {}
 
   if(!is.null(include)){
@@ -147,7 +155,13 @@ rk.XML.plugin <- function(name, dialog=NULL, wizard=NULL, logic=NULL, snippets=N
     all.children[[length(all.children)+1]] <- wizard
   }
 
-  top.doc <- XMLNode("document", .children=child.list(all.children))
+  # check for possible i18n
+  if(is.null(lang)){
+    lang.attrs <- NULL
+  } else {
+    lang.attrs <- list(lang=lang, "xml:lang"=lang)
+  }
+  top.doc <- XMLNode("document", attrs=lang.attrs, .children=child.list(all.children))
 
   plugin <- XMLTree(
       dtd=list(doctype="rkplugin"),
