@@ -90,6 +90,7 @@
 #'    that they were generated by \code{rkwarddev} and changes should be done to the script.
 #' @param hints Logical, if \code{TRUE} and you leave out optional entries (like \code{dependencies=NULL}), dummy sections will be added as comments.
 #' @param indent.by A character string defining the indentation string to use.
+#' @param lang Character string, the language of the plugin. See \code{\link[rkwarddev:i18n]{i18n}} for details.
 #' @return Character string with the path to the plugin root directory.
 #' @seealso \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 #' @export
@@ -159,7 +160,7 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
   overwrite=FALSE, tests=TRUE, lazyLoad=TRUE,
   create=c("pmap", "xml", "js", "rkh", "desc", "clog"), suggest.required=TRUE,
   components=list(), dependencies=NULL, edit=FALSE, load=FALSE, show=FALSE, gen.info=TRUE,
-  hints=TRUE, indent.by="\t"){
+  hints=TRUE, indent.by="\t", lang=rk.get.language()){
 
   if(inherits(about, "XiMpLe.node")){
     # check about and dependencies
@@ -183,6 +184,11 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
   # to besure, remove all non-character symbols from name
   name.orig <- name
   name <- clean.name(name)
+  
+  # check for i18n
+  if(!is.null(lang)){
+    lang <- paste0(".", lang)
+  } else {}
 
   # define paths an file names
   main.dir <- file.path(path, name)
@@ -193,7 +199,7 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
   rkward.dir <- file.path(main.dir, "inst", "rkward")
   plugin.dir <- file.path(rkward.dir, "plugins")
   # the basic file names
-  plugin.fname.pluginmap <- paste0(name, ".pluginmap")
+  plugin.fname.pluginmap <- paste0(name, lang, ".pluginmap")
   # file names with paths
   plugin.pluginmap <- file.path(rkward.dir, plugin.fname.pluginmap)
   tests.main.dir <- file.path(rkward.dir, "tests")
@@ -258,9 +264,9 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
       rkh.doc <- slot(this.comp, "rkh")
 
       # the basic file names
-      plugin.fname.xml <- paste0(comp.name, ".xml")
-      plugin.fname.js <- paste0(comp.name, ".js")
-      plugin.fname.rkh <- paste0(comp.name, ".rkh")
+      plugin.fname.xml <- paste0(comp.name, lang, ".xml")
+      plugin.fname.js <- paste0(comp.name, lang, ".js")
+      plugin.fname.rkh <- paste0(comp.name, lang, ".rkh")
       # file names with paths
       plugin.xml <- file.path(plugin.dir, plugin.fname.xml)
       plugin.js <- file.path(plugin.dir, plugin.fname.js)
@@ -310,7 +316,7 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
       # get components and hierarchy info from the components list
       all.components <- sapply(components, function(this.comp){
           comp.name <- slot(this.comp, "name")
-          named.compo <- paste0("plugins/", clean.name(comp.name), ".xml")
+          named.compo <- paste0("plugins/", clean.name(comp.name), lang, ".xml")
           # we'll name the component, to nicen the menu entry
           names(named.compo) <- comp.name
           return(named.compo)
