@@ -6,7 +6,7 @@
 rk.XML.plugin(name, dialog = NULL, wizard = NULL, logic = NULL,
   snippets = NULL, provides = NULL, help = TRUE, include = NULL,
   label = NULL, clean.name = TRUE, about = NULL, dependencies = NULL,
-  gen.info = TRUE)
+  gen.info = TRUE, lang = rk.get.language())
 }
 \arguments{
 \item{name}{Character string,
@@ -53,6 +53,9 @@ See \code{\link[rkwarddev:rk.XML.dependencies]{rk.XML.dependencies}} for details
 
 \item{gen.info}{Logical, if \code{TRUE} a comment note will be written into the document,
 that it was generated by \code{rkwarddev} and changes should be done to the script.}
+
+\item{lang}{Character string,
+      the language of the plugin. See \code{\link[rkwarddev:i18n]{i18n}} for details.}
 }
 \value{
 An object of class \code{XiMpLe.doc}.
