@@ -5,7 +5,7 @@
 \usage{
 rk.rkh.doc(summary = NULL, usage = NULL, sections = NULL,
   settings = NULL, related = NULL, technical = NULL, title = NULL,
-  hints = TRUE, gen.info = TRUE)
+  hints = TRUE, gen.info = TRUE, lang = rk.get.language())
 }
 \arguments{
 \item{summary}{An object of class \code{XiMpLe.node} to be pasted as the \code{<summary>} section. See
@@ -35,6 +35,9 @@ Refer to \code{\link{rk.rkh.scan}} for a function to create this from an existin
 
 \item{gen.info}{Logical, if \code{TRUE} a comment note will be written into the document,
 that it was generated by \code{rkwarddev} and changes should be done to the script.}
+
+\item{lang}{Character string,
+      the language of the help page. See \code{\link[rkwarddev:i18n]{i18n}} for details.}
 }
 \value{
 An object of class \code{XiMpLe.doc}.
